@@ -1,3 +1,4 @@
+ - Remove Function::Function(std::string filename)
  - Transition to new XML io
  - Remove GenericSparsityPattern::sort
  - Require sorted/unsorted parameter in SparsityPattern constructor
